# junctionx-uber-challenge

./: .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  zones.ipynb
.devcontainer/: devcontainer.json
Data/: README.md
Data/01_Overview_Analysis/: README.md
Data/02_Daily_Service_Averages/: README.md
Data/03_Daily_Detailed_Breakdowns/: README.md
Data/04_City_Analysis/: README.md
Data/05_Weather_Analysis/: README.md
Data/06_Surge_Analysis/: README.md
Data/07_EPH_Analysis/: README.md
Data/08_Vehicle_Analysis/: README.md
Data/09_Data_Summaries/Analysis_Reports/: COMPREHENSIVE_ANALYSIS_SUMMARY.md  README.md
Data/09_Data_Summaries/CSV_Data_Files/: additional_eph_correlations.csv  city_distance_eph_analysis.csv  city_hour_eph_summary.csv  city_performance_summary.csv  daily_eph_summary.csv  daily_hourly_surge_detailed.csv  daily_peak_surge_detailed.csv  hex_hotspots_summary.csv  hourly_city_performance.csv  hourly_patterns_detailed.csv  surge_patterns_summary.csv  top_location_zones.csv  vehicle_city_performance.csv  weather_category_analysis.csv  weather_city_performance.csv  weather_impact_summary.csv  weekend_city_performance.csv  weekend_comparison_detailed.csv
Data/09_Data_Summaries/Performance_Summaries/: enhanced_analysis_insights.txt  hourly_demand_insights.txt
client/: .eslintignore  .eslintrc.js  .prettierignore  .prettierrc.js  App.tsx  Dockerfile  Dockerfile.dev  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
client/__tests__/: App.test.tsx
client/components/: AISuggestions.tsx  CopilotAlert.tsx  DriverStatus.tsx  OptimalDetailsPanel.tsx  PhoneFrame.tsx  SchedulePanel.tsx  WellnessNudge.tsx
client/config/: Config.ts
client/e2e/: example.spec.ts
client/models/: api.ts
client/screens/: AIChatScreen.tsx  CopilotScreen.tsx  MainScreen.tsx  MapHomeScreen.tsx  MapZoneScreen.tsx  RecommendationsScreen.tsx  ScheduleScreen.tsx  WellbeingScreen.tsx
client/services/: aiService 2.ts  driverService.ts  drivingSessionService.ts  preferencesService.ts
server/: .gitignore  Dockerfile  Dockerfile.dev  PERFORMANCE_OPTIMIZATIONS.md  list_models.py  pyproject.toml
server/app/: advanced_analysis.py  ai_agent.py  cluster_analysis.py  compute.py  data_visualisation.ipynb  database.py  dp_cli.py  dynamic_programming_optimizer.py  endpoints 2.py  endpoints.py  example_usage.py  exceptions.py  graph_builder.py  hourly_rate_checker.py  main.py  models.py  service.py  weather_predictor.py
server/app/graphs/: city_graphs.pkl
server/app/outputs/: weather_trip_averages.csv
server/app/schemas/: __init__.py  input.py  internal.py  output.py
server/data/: cluster_coordinates_stats.csv  ride_trips_with_clusters.csv
server/data/cache/: city_graphs.pkl
